# misc-utils

./: CHANGELOG.md  bump-it-all.sh  link-misc-utils.sh  newpoem.sh
newpoem-data/: .gitignore  .pre-commit-config.yaml  README.md  pyproject-devtools.toml  pyproject.toml
