[tool.poetry]
name = "bla"
version = "0.1.0"
description = ""
authors = ["EdC <22207434+E-dC@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
pytest-flakes = "^4.0.5"
black = "^22.3.0"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v --flakes --cov bla"
testpaths = [
   "tests"
]
filterwarnings = [
    "ignore::DeprecationWarning:tensorflow.*:",
    "ignore::DeprecationWarning:keras_preprocessing.*:",
    "ignore::DeprecationWarning:flatbuffers.*:",
    "ignore::UserWarning:tensorflow.*:",
    "ignore::DeprecationWarning:future.*:"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
omit = [
    "test/*",
]

[tool.black]
line-length = 90
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | _build
    | build
    | dist
  )/
)
'''
